去除bintray-release, 会导致编译失败

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.library'
-apply plugin: 'com.novoda.bintray-release'//添加
+//apply plugin: 'com.novoda.bintray-release'//添加
 
 android {
     compileSdkVersion 28
@@ -23,12 +23,12 @@ dependencies {
     compile 'me.weishu:free_reflection:1.2.0'
 }
 
-//添加
-publish {
-//    userOrg = 'wanjiannotes'
-    groupId = 'com.wanjian'
-    artifactId = 'cockroach'
-    publishVersion = '0.0.5'
-    desc = '打不死的小强 , 永不crash的Android'
-    website = 'https://github.com/android-notes/Cockroach'
-}
+////添加
+//publish {
+////    userOrg = 'wanjiannotes'
+//    groupId = 'com.wanjian'
+//    artifactId = 'cockroach'
+//    publishVersion = '0.0.5'
+//    desc = '打不死的小强 , 永不crash的Android'
+//    website = 'https://github.com/android-notes/Cockroach'
+//}
